# todoist-api

./: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  ROADMAP.md
src/: lib.rs  models.rs  wrapper.rs
tests/: config.rs  integration_tests.rs  models_tests.rs  wrapper_tests.rs
tests/fixtures/: api_examples.json  todoist_api_v1_openapi.json
