[package]
name = "todoist-api"
version = "1.0.0-alpha.2"
edition = "2021"
description = "A Rust wrapper for the Todoist Unified API v1"
license = "MIT"
repository = "https://github.com/romaintb/todoist-api"
documentation = "https://docs.rs/todoist-api"
readme = "README.md"
keywords = ["todoist", "api", "todo", "task-management"]
categories = ["api-bindings", "web-programming"]
authors = ["Romain Bertrand <romain@doxin.net>"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.13", features = ["json", "query"] }

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"
serde_test = "1.0"

[features]
default = []
full = []

[[test]]
name = "models_tests"
path = "tests/models_tests.rs"

[[test]]
name = "wrapper_tests"
path = "tests/wrapper_tests.rs"

[[test]]
name = "integration_tests"
path = "tests/integration_tests.rs"

[[test]]
name = "error_handling_tests"
path = "tests/error_handling_tests.rs"
